force-app/main/default/objects/dataAccountingInformation__c/dataAccountingInformation__c.object-meta.xml
<CustomObject>
    <label>Accounting Information</label>
    <nameField>
        <label>Accounting Information</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accounting Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>