force-app/main/default/objects/dataAccountingInformation__c/fields/bt02__c.field-meta.xml
<CustomField>
    <fullName>bt02__c</fullName>
    <label>bt02</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>