force-app/main/default/objects/dataAccountingInformation__c/fields/bt03__c.field-meta.xml
<CustomField>
    <fullName>bt03__c</fullName>
    <label>bt03</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>