force-app/main/default/objects/dataAccountingInformation__c/fields/bt04__c.field-meta.xml
<CustomField>
    <fullName>bt04__c</fullName>
    <label>bt04</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>