force-app/main/default/objects/dataAccountingInformation__c/fields/bumo__c.field-meta.xml
<CustomField>
    <fullName>bumo__c</fullName>
    <label>bumo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>