force-app/main/default/objects/dataAccountingInformation__c/fields/tage__c.field-meta.xml
<CustomField>
    <fullName>tage__c</fullName>
    <label>tage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>